--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Symfony Websocket Example{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <link href="{{ asset('css/main.css') }}" type="text/css" rel="stylesheet" />
         {% endblock %}
 
         {% block javascripts %}
@@ -15,5 +16,6 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        <script src="{{ asset('js/chat.js') }}"></script>
     </body>
 </html>
