Webcoket url and port parameters moved to .env

--- a/templates/websocket/index.html.twig
+++ b/templates/websocket/index.html.twig
@@ -15,4 +15,8 @@
         <button type="button" id="sendBtn">Send</button>
     </div>
 
+    <script>
+        const socket = new WebSocket("ws://{{ websocket_url }}:{{ websocket_port }}");
+    </script>
+
 {% endblock %}
